# libatrade

./: .gitignore  libatrade.cabal  stack.yaml
src/: ATrade.hs
src/ATrade/: Logging.hs  Price.hs  Types.hs  Util.hs
src/ATrade/Broker/: Backend.hs  Client.hs  Protocol.hs  Server.hs
src/ATrade/Broker/TradeSinks/: TelegramTradeSink.hs  ZMQTradeSink.hs
src/ATrade/QuoteSource/: Client.hs  Server.hs
test/: ArbitraryInstances.hs  MockBroker.hs  Spec.hs  TestBrokerClient.hs  TestBrokerProtocol.hs  TestBrokerServer.hs  TestQuoteSourceClient.hs  TestQuoteSourceServer.hs  TestTypes.hs  TestZMQTradeSink.hs
