name:                libatrade
version:             0.5.0.0
synopsis:            ATrade infrastructure core library
description:         Please see README.md
homepage:            https://github.com/asakul/libatrade.git
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2016 Denis Tereshkin
category:            Trading
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wincomplete-patterns
  exposed-modules:     ATrade.Types
                     , ATrade.Price
                     , ATrade.QuoteSource.Client
                     , ATrade.QuoteSource.Server
                     , ATrade.Broker.Client
                     , ATrade.Broker.Protocol
                     , ATrade.Broker.Server
                     , ATrade.Broker.TradeSinks.TelegramTradeSink
                     , ATrade.Broker.TradeSinks.ZMQTradeSink
                     , ATrade.Util
  build-depends:       base >= 4.7 && < 5
                     , time
                     , datetime
                     , bytestring
                     , text
                     , binary
                     , aeson
                     , BoundedChan
                     , hslogger
                     , zeromq4-haskell
                     , zeromq4-haskell-zap
                     , unordered-containers
                     , containers
                     , monad-loops
                     , safe
                     , stm
                     , deepseq
                     , errors
                     , text-format
                     , parsec
                     , extra
                     , connection
                     , http-client
                     , http-client-tls
                     , utf8-string
                     , scientific
  default-language:    Haskell2010

executable libatrade-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  build-depends:       base
                     , libatrade
                     , pretty-hex
  default-language:    Haskell2010

test-suite libatrade-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , libatrade
                     , tasty
                     , tasty-hunit
                     , tasty-golden
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-hspec
                     , quickcheck-text
                     , quickcheck-instances
                     , scientific
                     , tuple
                     , time
                     , aeson
                     , text
                     , BoundedChan
                     , hslogger
                     , zeromq4-haskell
                     , zeromq4-haskell-zap
                     , bytestring
                     , monad-loops
                     , uuid
                     , stm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  default-language:    Haskell2010
  other-modules:       ArbitraryInstances
                     , MockBroker
                     , TestBrokerClient
                     , TestBrokerProtocol
                     , TestBrokerServer
                     , TestQuoteSourceClient
                     , TestQuoteSourceServer
                     , TestTypes
                     , TestZMQTradeSink

source-repository head
  type:     git
  location: https://github.com/asakul/libatrade.git
